@@ -1178,27 +1178,13 @@ int Game_object::get_rotated_frame
 	{
 	int curframe = get_framenum();
 	int shapenum = get_shapenum();
-	Shape_info& info = get_info();
 	if (shapenum == 292)		// Seat is a special case.
 		{
 		int dir = curframe%4;	// Current dir (0-3).
 		return (curframe - dir) + (dir + quads)%4;
 		}
-	else if (info.is_barge_part())	// Piece of a barge?
-		switch (quads)
-			{
-		case 1:
-			return (curframe^32)^((curframe&32) ? 3 : 1);
-		case 2:
-			return curframe^2;
-		case 3:
-			return (curframe^32)^((curframe&32) ? 1 : 3);
-		default:
-			return curframe;
-			}
 	else
-					// Reflect.  Bit 32==horizontal.
-		return curframe ^ ((quads%2)<<5);
+		return get_info().get_rotated_frame(curframe, quads);
 	}
 
 
